# skillful-alhazen

./: .gitignore  CLAUDE.md  Dockerfile.mcp  Makefile  README.md  alhazen.yaml  apt-design-report.md  docker-compose-typedb-mcp.yml  docker-compose-typedb.yml  docker-compose.yml  pyproject.toml  requirements-mcp.txt  skills-registry.yaml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: skill-gap.md
.github/workflows/: claude-autofix.yml  gap-triage.yml
agents/career-assistant/: AGENT.md
dashboard/: .gitignore  Dockerfile  electron-builder.yml  next.config.ts  package-lock.json  package.json
dashboard/electron/: main.js  preload.js
dashboard/public/: embedding-map.json  skills-config.json
deploy/: README.md  ansible.cfg  cleanup-old-alhazen.sh  deploy.env.example  deploy.sh  inventory.ini  playbook.yml  reset-macmini.sh  update-allowlist.sh  update-allowlist.yml  update-channels.sh  update-channels.yml  update-skills.sh
hub/: index.html
local_resources/: README-skills.md
local_resources/openclaw/: AGENTS.md  HEARTBEAT.md.template  MEMORY.md.template  SOUL.md  TOOLS.md.template  USER.md.template
local_resources/skilllog/: config.py  litellm_callback.py  skill_logger.py
local_resources/skills/: apm.yaml  epmc-search.yaml  jobhunt.yaml  techrecon.yaml  web-search.yaml
local_resources/textgrad/: skill_optimizer.py
local_resources/typedb/: alhazen_notebook.tql  generate_schema_docs.py  migrate_schema_v2.py
scripts/: LUCIS_DATA_READINESS.md  db_init.py  install_skill.py  migrate_person_model.py  package_skill.py
skills/_template/: SKILL.md  USAGE.md  skill.yaml  template.py
skills/agentic-memory/: SKILL.md  USAGE.md  agentic_memory.py  schema.tql  skill.yaml
skills/bioskills-index/: SKILL.md
skills/curation-skill-builder/: SKILL.md
skills/domain-modeling/: SKILL.md  USAGE.md  domain_modeling.py  schema.tql  skill.yaml
skills/skill-builder/: SKILL.md  USAGE.md  skill_builder.py
skills/tech-recon/: SKILL.md  USAGE.md  memory_eval_models.py  schema.tql  skill.yaml  tech_recon.py
skills/techrecon/: SKILL.md  USAGE.md  pyproject.toml  schema.tql  skill.yaml  techrecon.py
skills/techrecon/dashboard/: lib.ts
skills/techrecon/dashboard/components/: architecture-map.tsx  badges.tsx  investigation-card.tsx  systems-grid.tsx  tag-chips.tsx
skills/techrecon/dashboard/pages/techrecon/component/[id]/: page.tsx
skills/techrecon/dashboard/pages/techrecon/investigation/[id]/: page.tsx
skills/techrecon/dashboard/pages/techrecon/system/[id]/: page.tsx
skills/techrecon/dashboard/pages/techrecon/workflow/[id]/: page.tsx
skills/techrecon/dashboard/routes/architecture/[id]/: route.ts
skills/techrecon/dashboard/routes/artifact/[id]/: route.ts
skills/techrecon/dashboard/routes/benchmarks/[id]/: route.ts
skills/techrecon/dashboard/routes/comparisons/: route.ts
skills/techrecon/dashboard/routes/concept/[id]/: route.ts
skills/techrecon/dashboard/routes/data-model/[id]/: route.ts
skills/techrecon/dashboard/routes/decisions/[id]/: route.ts
skills/techrecon/dashboard/routes/systems/: route.ts
skills/techrecon/dashboard/routes/workflow/[id]/: route.ts
skills/techrecon/dashboard/routes/workflows/: route.ts
skills/they-said-whaaa/: SKILL.md  USAGE.md  schema.tql  skill.yaml  they_said_whaaa.py
skills/typedb-notebook/: SKILL.md  USAGE.md  skill.yaml  typedb-2x-documentation.md  (+1 more)
(+189 files in other folders)
