[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillful-alhazen"
dynamic = ["version"]
description = "A TypeDB-powered scientific knowledge notebook."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "GullyBurns", email = "gullyburns@gmail.com" },
]
keywords = [
    "ai",
    "scientific-knowledge",
    "typedb",
    "knowledge-graph",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "importlib-resources>=6.0.0",
    "pyyaml>=6.0.0",
    "python-docx>=1.2.0",
    "pdfplumber>=0.11.0",
    "sf-hamilton>=1.75.0",
    "anthropic>=0.97.0",
    "matplotlib>=3.10.8",
    "pymde>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff>=0.4.0",
]
typedb = [
    "typedb-driver>=3.8.0",
]
mcp = [
    "typedb-driver>=3.8.0",
    "mcp>=1.0.0",
]
skills = [
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.66.0",
]
skilllog = [
    "tiktoken>=0.7.0",
    "pyyaml>=6.0.0",
]
they-said-whaaa = [
    "youtube-transcript-api>=0.6",
]
qdrant = [
    "qdrant-client>=1.14.0",
]
semantic = [
    "voyageai>=0.3.0",
    "qdrant-client>=1.14.0",
    "hdbscan>=0.8.39",
    "umap-learn>=0.5.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
]
pipeline = [
    "sf-hamilton>=1.75.0",
]
all = [
    "skillful-alhazen[typedb,dev,skills,skilllog,semantic,pipeline]",
]

[project.scripts]

[project.urls]
Homepage = "https://github.com/GullyBurns/skillful-alhazen"
Repository = "https://github.com/GullyBurns/skillful-alhazen"

[template.licenses]
headers = true
default = [
  "Apache-2.0",
]

[tool.hatch.version]
path = "src/skillful_alhazen/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/src/skillful_alhazen"]

[tool.hatch.build.targets.wheel]
packages = ["src/skillful_alhazen"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", ".claude/skills"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict (Python 3.10+)
]

[tool.ruff.lint.isort]
known-first-party = ["skillful_alhazen"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
