[project]
name = "alhazen-skill-techrecon"
version = "0.1.0"
description = "Tech recon skill for the Alhazen knowledge notebook framework"
requires-python = ">=3.11"
dependencies = [
    "typedb-driver>=3.8.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0.0",
]

[tool.uv]
dev-dependencies = []
